tests/negative/externs/variadic_arity.orng
extern const printf: [*]Byte -> Int32

fn main() -> Int {
    printf()
    30
}